# python_17_12_2022

./: .flaskenv  01_basics.ipynb  02_klasy.ipynb  03_struktury_danych.ipynb  04_web_freameworks.ipynb  Untitled.ipynb  Zadanie_minions.py  assert_debug_off.py  budowa_adresu_url.txt  docstring_example.py  flask_example.py  hello_world.py  przestrzenie.py  run_yyy_service.py  simple_server.py  test.http  typowanie_mypy_example.py
examples/: 01_hello_world.py  02_assert_debug_off.py  docstring_example.py  interfaces.py  przestrzenie.py  run_yyy_service.py  typowanie_mypy_example.py
examples/cyclic_imports/: modula.py  modulb.py
examples/nested_project/pkg1/: __init__.py  mod1.py
examples/nested_project/pkg2/: mod2.py
examples/pakiet_zewnetrzny/: modul_zewnetrzny.py  modul_zewnetrzny_2.py
examples/pakiet_zewnetrzny/pakiet_wewnetrzny/: modul_wewnetrzny.py
examples/przestrzenie/: example.py  example2.py
examples/pypi_package_example/: LICENSE  README.md  pyproject.toml
examples/pypi_package_example/src/example_package_rk/: example.py
exercises/: .flake8  Zadanie_minions.py  capitalize.py  circle.py  class_instance_counter.py  flask_zadanie_1.md  formatter_linter_examples.py  funkcje_args_kwargs.py  interfaces.py  lambda_exercise.py  mypy_example.py  rangioli.py  rekurencja_cwiczenie.py  xxx.py
package_example/: modul_a.py
package_example/xxx/: yyy.py
templates/: about.html  base.html  card.html  content.html  formularz.html
web_projects/django_projects/project_with_cookiecutter/: .gitignore  CONTRIBUTORS.txt  LICENSE  (+5 more)
web_projects/todos/: db.py
(+150 files in other folders)
