[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_rafalk"
version = "0.0.2"
authors = [
    {name="rkorzen", email="korzniewski@gmail.com"},
]
description = "Example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rkorzen/pypi_example_rk"
"Bug Tracker" = "https://github.com/rkorzen/pypi_example_rk/issues"